stock status added to shopping cart and others

--- a/assets/css/track-order-v1-0-2.css
+++ b/assets/css/track-order-v1-0-2.css
@@ -89,6 +89,7 @@
     justify-content: center;
     gap: 1em;
     margin: 2em 0;
+    flex-wrap: wrap;
 }
 .pictures-container img{
     width: 25%;
