--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -1,73 +1,130 @@
-.modal{
-    display: none; /* Hidden by default */
-	position: fixed; /* Stay in place */
-	z-index: 101; /* Sit on top */
-	padding: 7em 0; /* Location of the box */
-	left: 0;
-	top: 0;
-	width: 100%; /* Full width */
-	height: 100%; /* Full height */
-	overflow: auto; /* Enable scroll if needed */
-	background-color: rgb(0,0,0); /* Fallback color */
-	background-color: rgba(0, 0, 0, 0.546); /* Black w/ opacity */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 101; /* Sit on top */
+  padding: 7em 0; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.546); /* Black w/ opacity */
 }
 
-.modal-content{
-	width: 70%;
-	margin: auto;
-  	padding: 20px;
-  	border: 1px solid #888;
-	background-color: white;
+.modal-content {
+  width: 70%;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  background-color: white;
 }
 
-.modal-content-header{
-    position: relative;
+.stock-info-modal-content {
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  background-color: white;
 }
 
-.modal-content-header > .logo{
-	width: 12%;
-	position: absolute;
-	left: 30px;
+.modal-content-header {
+  position: relative;
+}
+
+.modal-content-header > .logo {
+  width: 12%;
+  position: absolute;
+  left: 30px;
 }
 
 /*close modal button*/
 .modal-content-header > .close {
-	color: #aaaaaa;
-	float: right;
-	font-size: 28px;
-	font-weight: bold;
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
 }
 .close:hover,
 .close:focus {
-	color: #000;
-	text-decoration: none;
-	cursor: pointer;
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
 
-.modal-content-footer{
-    display: flex;
-	justify-content: center;
-	align-items: center;
-	position: relative;
+.modal-content-footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
-@media (max-width: 1100px){
-	.modal-content{
-		margin: 0 1;
-		width: 90%;
-	}
+/*---temporatly stock info model ----*/
 
-	.modal-content-header{
-		position: relative;
-	}
+.stock-modal-content {
+  width: 40%;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  background-color: white;
+}
 
-	.modal-content-header > .logo{
-		width: 33%;
-		position: static;
-	}
-	.modal-content-footer{
-		flex-wrap: wrap;
-		justify-content: space-around;
-		gap: 10px;
-	}
+.check-stock-button {
+  border: #d1aa68 solid 1px;
+  color: #d1aa68;
+  border-radius: 10px;
+  font-size: 0.9em;
+  padding: 10px 14px;
+  box-shadow: 1px 1px 1px;
+  font-weight: bolder;
+}
+.check-stock-button:hover {
+  background-color: #d1aa68;
+  color: #f4f5f3 !important;
+  box-shadow: none;
+}
+
+.title-stock-info {
+  font-weight: 300 !important;
+  text-align: center;
+  margin: 0.5em 0;
+}
+
+.stock-info-content-wrapper {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.stock-info-content-wrapper span {
+  padding: 1em 0;
+}
+
+.stock-info-content-wrapper h2 {
+  font-size: medium !important;
+  margin: 8px 0 !important;
+}
+.stock-info-content-wrapper p {
+  font-size: medium;
+  font-weight: 300;
+}
+
+@media (max-width: 1100px) {
+  .modal-content {
+    margin: 0 1;
+    width: 90%;
+  }
+
+  .modal-content-header {
+    position: relative;
+  }
+
+  .modal-content-header > .logo {
+    width: 33%;
+    position: static;
+  }
+  .modal-content-footer {
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 10px;
+  }
 }
